--- a/MetaMsg.html
+++ b/MetaMsg.html
@@ -36,5 +36,5 @@
             </div>
         </div>
     </body>
-    <script src="a.js"></script>
+    <script src="MetaMsg.js"></script>
 </html>
