--- a/demo/MetaMsg.html
+++ b/demo/MetaMsg.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>meta</title>
+        <title>Meta Transaction Demo</title>
     </head>
     <body>
         <div>
